# graphtactics

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  deploy.sh  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json  setup.sh
backend/.github/workflows/: ci.yml
backend/data/: boxes.json
backend/graphtactics/: adversary.py  app.py  config.py  dtos.py  escape_model.py  github_network_files.py  plan_geometry.py  planner.py  position.py  road_network.py  road_network_factory.py  scenario.py  seg_fault.py  serializer.py  tree_node.py  utils.py  vehicle.py
backend/tests/: conftest.py  pytest.ini  test_60.py  test_60c.py  test_api.py  test_d2.py  test_fastapi.py  test_graphs.py  test_road_network.py  test_road_network_factory.py  test_scalability.py  test_serialization_structure.py  test_utils.py  test_vehicles.py
backend/tests/api/: test_endpoints.py
backend/tests/factories/: test_graphs.py  test_road_network_factory.py
backend/tests/fixtures/plans/: d2_123.gpkg  deb_60.gpkg
backend/tests/integration/: test_network_60.py  test_network_60c.py  test_network_d2.py  test_scalability.py  test_serialization.py  test_vehicle_placement.py
backend/tests/unit/: test_adversary.py  test_dtos.py  test_escape_model.py  test_plan_geometry.py  test_planner.py  test_position.py  test_road_network.py  test_scenario.py  test_stats_rounding.py  test_tree_node.py  test_utils.py  test_vehicles.py
backend/typings/anytree/: __init__.pyi
frontend/: Dockerfile  nginx.conf  package.json  sequenceDiagram.md  tsconfig.json  vue.config.js
frontend/src/: App.vue  Help.vue  Stats.vue  common.ts  components.d.ts  i18n.js  i18n.ts  main.js  (+2 more)
terraform/: README.md  main.tf  outputs.tf  variables.tf
(+4 files in other folders)
